# backend-example

./: .flake8  .gitignore  .pylintrc  README.md  app.py  create_tables.py  deploy.sh  pyproject.toml  requirements.txt  run-tests.sh
.chalice/: config.json  test-policy.json
.chalice/deployed/: test.json
chalicelib/blueprints/: api_docs.py  articles.py  channels.py  hourtracking.py  users.py
chalicelib/helpers/: utils.py
chalicelib/managers/: basemanager.py
chalicelib/managers/articles/: articlemanager.py
chalicelib/managers/channels/: channelmanager.py
chalicelib/managers/users/: usermanager.py
chalicelib/models/: database.py  generic.py  user.py
chalicelib/models/payloads/: articles.py  channels.py
chalicelib/swagger_generator/: swagger_generator.py
chalicelib/workers/: articlescraper.py
docs/: call-diagramme.mmd  requirements.md
tests/integration/: conftest.py  steps.py
tests/integration/articles/: test_articles.py
tests/integration/channels/: test_channels.py
tests/integration/users/: test_users.py
